<resources>
    <string name="app_name">NoCheats</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="text_forget_password">忘记密码？</string>
    <string name="text_to_register">点此注册</string>

    <string name="text_post_content">随着UI创建技术的功能日益增强，UI层也履行着越来越多的职责。为了更好地细分视图(View)与模型(Model)的功能，让View专注于处理数 据的可视化以及与用户的交互，同时让Model只关系数据的处理，基于MVC概念的MVP(Model-View-Presenter)模式应运而生
    随着UI创建技术的功能日益增强，UI层也履行着越来越多的职责。为了更好地细分视图(View)与模型(Model)的功能，让View专注于处理数 据的可视化以及与用户的交互，同时让Model只关系数据的处理，基于MVC概念的MVP(Model-View-Presenter)模式应运而生
        随着UI创建技术的功能日益增强，UI层也履行着越来越多的职责。为了更好地细分视图(View)与模型(Model)的功能，让View专注于处理数 据的可视化以及与用户的交互，同时让Model只关系数据的处理，基于MVC概念的MVP(Model-View-Presenter)模式应运而生
        随着UI创建技术的功能日益增强，UI层也履行着越来越多的职责。为了更好地细分视图(View)与模型(Model)的功能，让View专注于处理数 据的可视化以及与用户的交互，同时让Model只关系数据的处理，基于MVC概念的MVP(Model-View-Presenter)模式应运而生
    </string>

    <string name="text_register_tips">注意:确定昵称之后就不能修改了哦</string>
    <string name="text_register_congratulation">恭喜你\n 注册成功!</string>

    //------------------------------------------------
    <string name="user_name">no cheats</string>
    <string name="game_tips">这是一个小游戏，根据场景你可以有自己的选择，最终系统会根据你的选择来给出相对应的建议，
        来开始我们的游戏吧，请慎重选择，游戏不可以回退到上一步，提高我们的防骗意识！！！</string>
    <string name="next_step">下一步</string>
    <string name="toolbar_name_game">防骗小游戏</string>
    <string name="toolbar_name_tips">防骗小技巧</string>
    <string name="start_game">开始游戏</string>
    <string name="system_friendly_tips">系统友情提示：</string>
</resources>
