<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">
    <android.support.v7.widget.Toolbar
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_marginLeft="20dp"
            android:layout_width="15dp"
            android:layout_height="25dp"
            android:src="@mipmap/ico_back"/>
        <TextView
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toolbar_name_game"
            android:textSize="17sp"
            android:textColor="@android:color/white"/>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rl_game_start"
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">
        <TextView
            android:id="@+id/tv_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:textSize="16sp"
            android:textColor="@color/Green"
            android:text="@string/game_tips"/>
        <TextView
            android:id="@+id/tv_start_game"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:layout_below="@id/tv_tips"
            android:text="@string/start_game"
            android:textSize="18sp"
            android:layout_marginTop="60dp"
            android:background="@color/colorLogout"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/title"
        android:id="@+id/rl_game_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_situation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textColor="@color/colorBdiduText"
            />

        <com.bigmercu.cBox.CheckBox
            android:id="@+id/ck_choice_one"
            android:layout_below="@+id/tv_situation"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            app:check_text="算法1"
            app:show_border="true"
            app:color_after="@color/colorAccent"
            app:color_before="@color/colorPrimary"
            app:check_style="hook"
            />

        <com.bigmercu.cBox.CheckBox
            android:id="@+id/ck_choice_two"
            android:layout_below="@+id/ck_choice_one"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            app:check_text="算法2"
            app:show_border="true"
            app:color_after="@color/colorAccent"
            app:color_before="@color/colorPrimary"
            app:check_style="hook"
            />
        <com.bigmercu.cBox.CheckBox
            android:id="@+id/ck_choice_three"
            android:layout_below="@+id/ck_choice_two"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            app:check_text="算法3"
            app:show_border="true"
            app:color_after="@color/colorAccent"
            app:color_before="@color/colorPrimary"
            app:check_style="hook"
            />
        <com.bigmercu.cBox.CheckBox
            android:id="@+id/ck_choice_four"
            android:layout_below="@+id/ck_choice_three"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            app:check_text="算法4"
            app:show_border="true"
            app:color_after="@color/colorAccent"
            app:color_before="@color/colorPrimary"
            app:check_style="hook"
            />


        <TextView
            android:id="@+id/tv_next_step"
            android:layout_below="@+id/ck_choice_four"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorLogout"
            android:text="@string/next_step"
            android:textSize="18sp"
            android:textColor="#fff"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/tv_next_step"
            android:textSize="16sp"
            android:text="@string/system_friendly_tips"/>
        <TextView
            android:id="@+id/tv_advise"
            android:layout_below="@+id/tv"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:visibility="gone"/>
    </RelativeLayout>

</RelativeLayout>